# wasm-ai-template

./: Cargo.toml  LICENSE_MIT  README.md
src/: lib.rs  utils.rs
